created the board

--- a/grid/index.html
+++ b/grid/index.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="row">
-      <aside class="col-2">
+      <aside>
         <div class="stats">Stats</div>
         <div class="games-played">Games Played</div>
         <div class="num1">0</div>
@@ -35,32 +35,29 @@
         <div class="num3">0</div>
       </aside>
 
-      <main class="col-10">
-        <div class="row">
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
+      <main class="flex-grid">
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
 
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
 
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
 
-
-        </div>
-      </main class="col-10" >
+      </main>
     </div>
 
 
