--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="grid.css">
+  <link rel="stylesheet" href="./grid.css">
+  <link rel="stylesheet" href="./style.css">
   <title>LFZ Memory Match</title>
 </head>
 
@@ -35,32 +35,32 @@
         <div class="num3">0</div>
       </aside>
 
-      <main class="col-10">
+      <main class="col-10 game-row">
         <div class="row">
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
+          <div class="col-2 card"></div>
+          <div class="col-2 card"></div>
+          <div class="col-2 card"></div>
+          <div class="col-2 card"></div>
+          <div class="col-2 card"></div>
+          <div class="col-2 card"></div>
 
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
+          <div class="col-2 card"></div>
+          <div class="col-2 card"></div>
+          <div class="col-2 card"></div>
+          <div class="col-2 card"></div>
+          <div class="col-2 card"></div>
+          <div class="col-2 card"></div>
 
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
-          <div class="col-2" id="card"></div>
+          <div class="col-2 card"></div>
+          <div class="col-2 card"></div>
+          <div class="col-2 card"></div>
+          <div class="col-2 card"></div>
+          <div class="col-2 card"></div>
+          <div class="col-2 card"></div>
 
 
         </div>
-      </main class="col-10" >
+      </main>
     </div>
 
 
