--- a/index.html
+++ b/index.html
@@ -37,26 +37,79 @@
 
       <main class="col-10 game-row">
         <div class="row">
-          <div class="col-2 card"></div>
-          <div class="col-2 card"></div>
-          <div class="col-2 card"></div>
-          <div class="col-2 card"></div>
-          <div class="col-2 card"></div>
-          <div class="col-2 card"></div>
+          <div class="col-2 card">
+            <div class="card-front"></div>
+            <div class="card-back"></div>
+          </div>
+          <div class="col-2 card">
+            <div class="card-front"></div>
+            <div class="card-back"></div>
+          </div>
+          <div class="col-2 card">
+            <div class="card-front"></div>
+            <div class="card-back"></div>
+          </div>
+          <div class="col-2 card">
+            <div class="card-front"></div>
+            <div class="card-back"></div>
+          </div>
+          <div class="col-2 card">
+            <div class="card-front"></div>
+            <div class="card-back"></div>
+          </div>
+          <div class="col-2 card">
+            <div class="card-front"></div>
+            <div class="card-back"></div>
+          </div>
 
-          <div class="col-2 card"></div>
-          <div class="col-2 card"></div>
-          <div class="col-2 card"></div>
-          <div class="col-2 card"></div>
-          <div class="col-2 card"></div>
-          <div class="col-2 card"></div>
-
-          <div class="col-2 card"></div>
-          <div class="col-2 card"></div>
-          <div class="col-2 card"></div>
-          <div class="col-2 card"></div>
-          <div class="col-2 card"></div>
-          <div class="col-2 card"></div>
+          <div class="col-2 card">
+            <div class="card-front"></div>
+            <div class="card-back"></div>
+          </div>
+          <div class="col-2 card">
+            <div class="card-front"></div>
+            <div class="card-back"></div>
+          </div>
+          <div class="col-2 card">
+            <div class="card-front"></div>
+            <div class="card-back"></div>
+          </div>
+          <div class="col-2 card">
+            <div class="card-front"></div>
+            <div class="card-back"></div>
+          </div>
+          <div class="col-2 card">
+            <div class="card-front"></div>
+            <div class="card-back"></div>
+          </div>
+          <div class="col-2 card">
+            <div class="card-front"></div>
+            <div class="card-back"></div>
+          </div>
+          <div class="col-2 card">
+            <div class="card-front"></div>
+            <div class="card-back"></div>
+          </div>
+          <div class="col-2 card">
+            <div class="card-front"></div>
+            <div class="card-back"></div>
+          </div>
+          <div class="col-2 card">
+            <div class="card-front"></div>
+            <div class="card-back"></div>
+          </div>
+          <div class="col-2 card">
+            <div class="card-front"></div>
+            <div class="card-back"></div>
+          </div>
+          <div class="col-2 card">
+            <div class="card-front"></div>
+            <div class="card-back"></div>
+          </div>
+          <div class="col-2 card">
+            <div class="card-front"></div>
+            <div class="card-back"></div>
+          </div>
 
 
         </div>
