--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </header>
     </div>
 
-    <div class="row">
+    <div class="row col-12">
       <aside class="col-2">
         <div class="stats">Stats</div>
         <div class="games-played">Games Played</div>
@@ -132,6 +132,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
+<script src="assets/js/script.js"></script>
 </body>
 
 </html>
