--- a/index.html
+++ b/index.html
@@ -35,79 +35,79 @@
         <div class="num3">0</div>
       </aside>
 
-      <main class="col-10 game-row">
+      <main class="col-10" id="gameCards">
         <div class="row">
           <div class="col-2 card">
-            <div class="card-front"></div>
+            <div class="card-front css-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front"></div>
+            <div class="card-front docker-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front"></div>
+            <div class="card-front gitHub-logo"></div>
+            <div class="card-back"></div>
+          </div>
+          <div class="col-2 card html-logo">
+            <div class="card-front "></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front"></div>
+            <div class="card-front js-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front"></div>
-            <div class="card-back"></div>
-          </div>
-          <div class="col-2 card">
-            <div class="card-front"></div>
+            <div class="card-front mysql-logo"></div>
             <div class="card-back"></div>
           </div>
 
           <div class="col-2 card">
-            <div class="card-front"></div>
+            <div class="card-front node-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front"></div>
+            <div class="card-front php-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front"></div>
+            <div class="card-front react-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front"></div>
+            <div class="card-front css-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front"></div>
+            <div class="card-front docker-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front"></div>
+            <div class="card-front gitHub-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front"></div>
+            <div class="card-front html-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front"></div>
+            <div class="card-front js-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front"></div>
+            <div class="card-front mysql-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front"></div>
+            <div class="card-front node-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front"></div>
+            <div class="card-front php-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front"></div>
+            <div class="card-front react-logo"></div>
             <div class="card-back"></div>
           </div>
 
