fixed a stupid error with the html-logo, i put it in the wrong class

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <div class="card-front gitHub-logo"></div>
             <div class="card-back"></div>
           </div>
-          <div class="col-2 card html-logo">
-            <div class="card-front "></div>
+          <div class="col-2 card">
+            <div class="card-front html-logo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
