--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
     <div class="row col-12">
       <aside class="col-2">
-        <div class="stats">Stats</div>
-        <div class="games-played">Games Played</div>
-        <div class="num1">0</div>
-        <div class="attempts">Attempts</div>
-        <div class="num2">0</div>
-        <div class="accuracy">Accuracy</div>
-        <div class="num3">0</div>
+        <div>Stats</div>
+        <div>Games Played</div>
+        <div id="games-played">0</div>
+        <div>Attempts</div>
+        <div id="attempts">0</div>
+        <div>Accuracy</div>
+        <div id="accuracy">0%</div>
       </aside>
 
       <main class="col-10" id="gameCards">
