--- a/index.html
+++ b/index.html
@@ -118,7 +118,11 @@
       </main>
       <div class="modal-overlay hidden">
 
-        <div class="modal-content">Congratulations, you have won!</div>
+        <div class="modal-content">
+          <h1>Congratulations, you have won!</h1>
+          <button id="resetButton">Would You Like to Play Again?</button>
+          </div>
+
 
       </div>
 
