--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="row">
       <header>
-        <h1>LFZ Memory Match</h1>
+        <h1 class="main-title">LFZ Memory Match</h1>
       </header>
     </div>
 
