--- a/index.html
+++ b/index.html
@@ -40,78 +40,80 @@
       <main class="col-10" id="gameCards">
         <div class="row">
           <div class="col-2 card">
-            <div class="card-front css-logo"></div>
+            <div class="card-front netflix"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front docker-logo"></div>
+            <div class="card-front disney"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front gitHub-logo"></div>
+            <div class="card-front hbo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front html-logo"></div>
+            <div class="card-front amazon"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front js-logo"></div>
+            <div class="card-front hulu"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front mysql-logo"></div>
+            <div class="card-front thanos"></div>
+            <div class="card-back"></div>
+          </div>
+          <div class="col-2 card">
+            <div class="card-front youtube"></div>
+            <div class="card-back"></div>
+          </div>
+          <div class="col-2 card">
+            <div class="card-front cbs"></div>
+            <div class="card-back"></div>
+          </div>
+          <div class="col-2 card">
+            <div class="card-front anime"></div>
             <div class="card-back"></div>
           </div>
 
           <div class="col-2 card">
-            <div class="card-front node-logo"></div>
+            <div class="card-front netflix"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front php-logo"></div>
+            <div class="card-front disney"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front react-logo"></div>
+            <div class="card-front hbo"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front css-logo"></div>
+            <div class="card-front amazon"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front docker-logo"></div>
+            <div class="card-front hulu"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front gitHub-logo"></div>
+            <div class="card-front thanos"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front html-logo"></div>
+            <div class="card-front youtube"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front js-logo"></div>
+            <div class="card-front cbs"></div>
             <div class="card-back"></div>
           </div>
           <div class="col-2 card">
-            <div class="card-front mysql-logo"></div>
+            <div class="card-front anime"></div>
             <div class="card-back"></div>
           </div>
-          <div class="col-2 card">
-            <div class="card-front node-logo"></div>
-            <div class="card-back"></div>
-          </div>
-          <div class="col-2 card">
-            <div class="card-front php-logo"></div>
-            <div class="card-back"></div>
-          </div>
-          <div class="col-2 card">
-            <div class="card-front react-logo"></div>
-            <div class="card-back"></div>
-          </div>
+
+
 
 
         </div>
