--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
         <div id="accuracy">0%</div>
       </aside>
 
-      <main class="col-10" id="gameCards">
-        <div class="row">
+      <div class="col-10">
+      <main id="gameCards">
+        <!-- <div class="row" > -->
           <div class="col-2 card">
             <div class="card-front netflix"></div>
             <div class="card-back"></div>
@@ -115,9 +116,10 @@
 
 
 
-
-        </div>
+<!--
+        </div> -->
       </main>
+      </div>
       <div class="modal-overlay hidden">
 
         <div class="modal-content">
