--- a/index.html
+++ b/index.html
@@ -37,9 +37,7 @@
         <div id="accuracy">0%</div>
       </aside>
 
-      <div class="col-10">
-      <main id="gameCards">
-        <!-- <div class="row" > -->
+      <main class="col-10" id="gameCards">
           <div class="col-2 card">
             <div class="card-front netflix"></div>
             <div class="card-back"></div>
@@ -113,26 +111,30 @@
             <div class="card-front anime"></div>
             <div class="card-back"></div>
           </div>
-
-
-
-<!--
-        </div> -->
       </main>
-      </div>
-      <div class="modal-overlay hidden">
+
+      <!-- <div class="modal-overlay hidden">
 
         <div class="modal-content">
           <h1>Congratulations, you have won!</h1>
           <button id="resetButton">Would You Like to Play Again?</button>
           </div>
 
-
-      </div>
+      </div> -->
 
     </div>
 
   </div>
+
+      <div class="modal-overlay hidden">
+
+        <div class="modal-content">
+          <h1>Congratulations, you have won!</h1>
+          <button id="resetButton">Would You Like to Play Again?</button>
+        </div>
+
+      </div>
+
 <!-- Background Photo by Joshua Sortino on Unsplash -->
 
   <!-- Optional JavaScript -->
