added a game over modal

--- a/index.html
+++ b/index.html
@@ -45,16 +45,28 @@
 
   </div>
 
-      <div class="modal-overlay hidden">
+  <div class="modal-overlay hidden">
+    <div class="modal-content">
+      <h1>Congratulations, you have won!</h1>
+      <h2>Would you like to play again?</h2>
+      <p><button id="resetButton">Yes</button></p>
+      <p><button id="gameOver">No</button></p>
+    </div>
+  </div>
 
-        <div class="modal-content">
-          <h1>Congratulations, you have won!</h1>
-          <button id="resetButton">Would You Like to Play Again?</button>
-        </div>
+  <div class="modal-overlayEnd hidden">
+    <div class="modal-contentEnd">
+      <h1>Game Over</h1>
+      <p>
+        <button id="restart">Restart</button>
+      </p>
+    </div>
+  </div>
 
-      </div>
 
-<!-- Background Photo by Joshua Sortino on Unsplash -->
+
+
+  <!-- Background Photo by Joshua Sortino on Unsplash -->
 
   <!-- Optional JavaScript -->
 
