add close window button

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
       <p>
         <button id="restart">Restart</button>
       </p>
+      <p>
+        <button id="close-window">Close</button>
+      </p>
     </div>
   </div>
 
