removed closed button, added games count to game over overlay

--- a/index.html
+++ b/index.html
@@ -57,13 +57,11 @@
   <div class="modal-overlayEnd hidden">
     <div class="modal-contentEnd">
       <h1>Game Over</h1>
+      <p id="games-end"></p>
       <p>
         <button id="restart">Restart</button>
       </p>
-      <p>
-        <button id="close-window">Close</button>
-      </p>
-    </div>
+     </div>
   </div>
 
 
