--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="./assets/css/grid.css">
   <link rel="stylesheet" href="./assets/css/style.css">
-  <title>LFZ Memory Match</title>
+  <title>Star Wars Memory Match</title>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
 
     <div class="row">
       <header>
-        <h1 class="main-title">LFZ Memory Match</h1>
+        <h1 class="main-title">Memory Match Game</h1>
       </header>
     </div>
 
