--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <div class="modal-overlay hidden">
     <div class="modal-content">
-      <h1>Congratulations, you have won!</h1>
+      <h1>Congrats, you have won!</h1>
       <h2>Would you like to play again?</h2>
       <p><button id="resetButton">Yes</button></p>
       <p><button id="gameOver">No</button></p>
