added ending gif

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <div class="modal-overlay hidden">
     <div class="modal-content">
-      <h1>Congrats, you have won!</h1>
+      <h1>Hooray, you have won!</h1>
       <h2>Would you like to play again?</h2>
       <p><button id="resetButton">Yes</button></p>
       <p><button id="gameOver">No</button></p>
@@ -52,6 +52,7 @@
     <div class="modal-contentEnd">
       <h1>Game Over</h1>
       <p id="games-end"></p>
+      <img src="./assets/images/star-wars/darthV.gif" alt="dancedance">
       <p>
         <button id="restart">Restart</button>
       </p>
