--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
   <div class="modal-overlay hidden">
     <div class="modal-content">
-      <h1>Hooray, you have won!</h1>
-      <h2>Would you like to play again?</h2>
+      <h1>You have won!</h1>
+      <h2>Play again?</h2>
       <p><button id="resetButton">Yes</button></p>
       <p><button id="gameOver">No</button></p>
     </div>
