--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div class="row">
       <header>
-        <h1 class="main-title">Memory Match Game</h1>
+        <h1 class="main-title">Star Wars Memory Match</h1>
       </header>
     </div>
 
